--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,123 @@
 
 :root {
   font-size: 16px;
+
+  --primary: #D2FA63;
+  --primary-dark: #ADD738;
+  --secondary: #323232;
+  --secondary-dark: #212122;
+  --tertiary:  #13C296;
+  --tertiary-dark: #13C296;
+  --primary-text : #191919;
+  --secondary-text : #C3C3C3;
+  --stroke: #DFDFE0;
+
+  --dark-1: #111928; 
+  --dark-2: #1F2A37;
+  --dark-3: #374151;
+  --dark-4: #4B5563;
+  --dark-5: #6B7280;
+  --dark-6: #9CA3AF;
+  --dark-7: #D1D5DB;
+  --dark-8: #E5E7EB;
+
+  --white: #FFFFFF;
+
+  --gray-1: #F9FAFB;
+  --gray-2: #F3F4F6;
+  --gray-3: #E8E8E8;
+  --gray-4: #D3D3D3;
+  --gray-5: #B2B2B4;
+  --gray-6: #8C8C8E;
+  --gray-7: #7B7B7E;
+
+  /* -- yellow -- */
+  --yellow: #FBBF24;
+  --yellow-dark: #F59E0B;
+  --yellow-dark-2: #D97706;
+  --yellow-light: #FCD34D;
+  --yellow-light-2: #FDE68A;
+  --yellow-light-3: #FEF3C7;
+  --yellow-light-4: #FFFBEB;
+  --yellow-neon: #F5F378;
+  --yellow-neon-dark: #F5F378;
+  --yellow-neon-light: #F7F593;
+
+  /* -- orange -- */
+  --orange: #F27430;
+  --orange-dark: #E1580E;
+  --orange-light: #F59460;
+  --orange-light-2: #F8B490;
+  --orange-light-3: #FBD5C0;
+  --orange-light-4: #FDE5D8;
+  --orange-light-5: #FFF0E9;
+
+  /* -- red -- */
+  --red: #F23030;
+  --red-dark: #E10E0E;
+  --red-light: #F56060;
+  --red-light-2: #F89090;
+  --red-light-3: #FBC0C0;
+  --red-light-4: #FDD8D8;
+  --red-light-5: #FEEBEB;
+  --red-light-6: #FEF3F3;
+
+  /* -- pink -- */
+  --pink: #D345F8;
+  --pink-dark: #C814F6;
+  --pink-light: #DF76FA;
+  --pink-light-2: #EAA7FC;
+  --pink-light-3: #F6D8FE;
+  --pink-light-4: #FCF1FE;
+
+  /* -- purple -- */
+  --purple: #8646F4;
+  --purple-dark: #6D28D9;
+  --purple-dark-2: #5B21B6;
+  --purple-light: #A78BFA;
+  --purple-light-2: #C4B5FD;
+  --purple-light-3: #DDD6FE;
+  --purple-light-4: #EDE9FE;
+  --purple-light-5: #F5F3FF;
+
+  /* -- blue -- */
+  --blue: #2D68F8;
+  --blue-dark: #1C3FB7;
+  --blue-light: #5475E5;
+  --blue-light-2: #8099EC;
+  --blue-light-3: #ADBCF2;
+  --blue-light-4: #C3CEF6;
+  --blue-light-5: #E1E8FF;
+
+  /* -- cyan -- */
+  --cyan: #01A9DB;
+  --cyan-dark: #0B76B7;
+  --cyan-light: #18BFFF;
+  --cyan-light-2: #77D1F3;
+  --cyan-light-3: #D0F0FD;
+
+  /* -- teal -- */
+  --teal: #02AAA4;
+  --teal-dark: #06A09B;
+  --teal-light: #20D9D2;
+  --teal-light-2: #72DDC3;
+  --teal-light-3: #C2F5E9;
+
+  /* -- green -- */
+  --green: #22AD5C;
+  --green-dark: #1A8245;
+  --green-light: #2CD673;
+  --green-light-2: #57DE8F;
+  --green-light-3: #82E6AC;
+  --green-light-4: #ACEFC8;
+  --green-light-5: #C2F3D6;
+  --green-light-6: #DAF8E6;
+
+  /* -- alert -- */
+  --alert-success: #7FEC92;
+  --alert-info: #8CD5FE;
+  --alert-warning: #FFC98D;
+  --alert-danger: #FF5E5E;
 }
 
 body {
