style: teriary css변수 헥사코드값 수정
- tertiary 13c296 => 4e61da
- tertiary-dark 13c296 => 464ddb

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,8 +9,8 @@
   --primary-dark: #ADD738;
   --secondary: #323232;
   --secondary-dark: #212122;
-  --tertiary:  #13C296;
-  --tertiary-dark: #13C296;
+  --tertiary:  #4E61DA;
+  --tertiary-dark: #464DDB;
   --primary-text : #191919;
   --secondary-text : #C3C3C3;
   --stroke: #DFDFE0;
