--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -135,4 +135,12 @@ body {
     padding-left: 20px;
     padding-right: 15px;
   }
+
+  .alarmBox{
+    width: 297px;
+    padding-left: 20px;
+    padding-right: 20px;
+    height: 100dvh;
+    background: red;
+  }
 }
