component: SearchSection 컴포넌트 추가 및 하위 컴포넌트 Memoir 컴포넌트 추가

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -122,7 +122,10 @@
   --alert-warning: #FFC98D;
   --alert-danger: #FF5E5E;
 
-  --button-blue: #007BFF
+  /* -- etc -- */
+  --button-blue: #007BFF;
+  --search-datetime: #2C2C2E;  
+  --search-project: #828286;
 }
 
 body {
