component: SearchTabs에 type 속성 추가 및 SearchCard, SearchWord 컴포넌트 추가, 색상 변수 업데이트

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
 
   --primary: #D2FA63;
   --primary-dark: #ADD738;
+  --primary-50:#D2FA6380;
   --secondary: #323232;
   --secondary-dark: #212122;
   --tertiary:  #4E61DA;
